fixed minor bugs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,11 +21,11 @@ spring.servlet.multipart.max-request-size=10MB
 
 jwt.secret=sq008
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:postgresql://localhost:5432/MyBlog
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/safaridb
 spring.datasource.driver-class-name= org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=private
+spring.datasource.password=flora1993
 spring.jpa.show-sql=true
 spring.devtools.restart.enabled=true
 spring.devtools.restart.poll-interval=2s
